# uv-matrix

./: .gitignore  LICENSE  README.md  pyproject.toml  renovate.json
.github/workflows/: test.yml
docs/: README.md  api.md  changelog.md  conf.py  configuration.md  index.md  installation.md  quickstart.md  requirements.txt  security.md  usage.md
examples/matrix-test/: envfile  main.py  pyproject.toml
examples/matrix-test/docs/source/: conf.py  index.rst
examples/matrix-test/tests/: test_main.py
examples/minimum/: main.py  pyproject.toml
examples/run-tools/: main.py  pyproject.toml
src/uv_matrix/: __init__.py  cli.py  config.py  evaluate.py  runner.py
tests/: test_uv_matrix.py
